Create Cors with javadoc